--- a/bb-exporter-tester/charts/values.yaml
+++ b/bb-exporter-tester/charts/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: "kagameow/bbtest"
   tag: "latest"
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 imagePullSecrets: []
 nameOverride: ""
